@@ -258,6 +258,16 @@
                             </tr>
                         </table>
                     </div>
+                    <div class="banner event-banner">
+                        <p class="beginner-title">Abundance of the Water</p>
+                        <table class="js-temp-banner-history banner-history">
+                            <tr>
+                                <th class="history-header">Name</th>
+                                <th class="history-header">Time</th>
+                                <th class="history-header">Pity</th>
+                            </tr>
+                        </table>
+                    </div>
                     <div class="graph">this is where i would put my graph if i had one</div>
                 </div>
             </div>
